# balance

./: .gitignore  Cargo.toml  Dockerfile  README.md  balance.yml  justfile
src/: app.rs  cli.rs  main.rs
src/app/: models.rs  money.rs
