[package]
name = "balance"
version = "0.1.0"
edition = "2021"
description = """
CLI tool to balance your budget 
"""
readme = "README.md"
categories = ["command-line-interface", "finance", "accounting", "budget"]
keywords = ["cli", "api", "money", "budget"]
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  # "examples/**/*"
]

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
csv = "1.1.6"
dotenv = "0.15.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
prettytable-rs = "0.10.0"
rusty-money = "0.4.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tempfile = "3.3.0"

[dev-dependencies]
assert_cmd = "2.0.8" # Requires glibc in debian image in a docker container
pretty_assertions = "1.3.0"
predicates = "2"
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
debug = false
lto = true
incremental = true
codegen-units = 1
